prevented horizontal scrolling in body

--- a/contact-me.css
+++ b/contact-me.css
@@ -1,7 +1,6 @@
 /* General Styles */
 body {
     background-color: #373434;
-    width: 100%;
     margin: 0;
     font-family: 'Spectral', serif;
     color: white;
@@ -54,7 +53,7 @@ body {
     background-color: #404040;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     max-width: 50rem;
-    margin: 2rem auto;
+    margin-left: 20rem;
     border-radius: 8px;
 }
 
